--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "chal-dafa-ho",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://ahsan-ahmed.github.io/hello-react/",
+  "homepage": "https://ahsan-ahmed.github.io/hello-react/",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.3"
@@ -11,8 +12,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
